[package]
name = "snops"
version = "0.1.0"
edition = "2021"

[features]
default = []
docpages = ["clipages", "mangen"]
clipages = ["snops-common/clipages"]
mangen = ["snops-common/mangen"]

[dependencies]
axum = { workspace = true, features = [
	"http2",
	"json",
	"query",
	"tokio",
	"ws",
	"macros",
] }
bimap = { workspace = true, features = ["serde"] }
bincode.workspace = true
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["env"] }
dashmap = { workspace = true, features = ["serde"] }
fixedbitset.workspace = true
futures-util.workspace = true
hmac.workspace = true
http.workspace = true
indexmap = { workspace = true, features = ["serde"] }
jwt.workspace = true
lazysort.workspace = true
lazy_static.workspace = true
prometheus-http-query = "0.8"
promql-parser = "0.4"
rand.workspace = true
rand_chacha.workspace = true
rayon.workspace = true
reqwest = { workspace = true, features = ["json", "stream"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
sled.workspace = true
snops-checkpoint.workspace = true
snops-common = { workspace = true, features = ["aot_cmds"] }
strum_macros.workspace = true
tarpc.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
tower.workspace = true
tower-http.workspace = true
tracing-appender.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["fast-rng", "v4"] }
