[package]
name = "snot-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { workspace = true }
clap = { workspace = true }
futures-util = "0.3.30"
snot-common = { path = "../snot-common", features = ["client"] }
tokio = { workspace = true }
tokio-tungstenite = "0.21.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
