[package]
name = "snot-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode.workspace = true
clap.workspace = true
futures.workspace = true
futures-util.workspace = true
http.workspace = true
snot-common = { path = "../snot-common" }
tarpc.workspace = true
tokio.workspace = true
tokio-tungstenite = "0.21.0"
tracing.workspace = true
tracing-subscriber.workspace = true
