[package]
name = "snot-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
bincode.workspace = true
clap.workspace = true
external-ip = "4.2.0"
futures.workspace = true
futures-util.workspace = true
http.workspace = true
httpdate = "1.0.3"
local-ip-address = "0.6.1"
reqwest = { workspace = true, features = ["stream", "json"] }
snot-common = { path = "../snot-common" }
tarpc.workspace = true
tokio.workspace = true
tokio-tungstenite = "0.21.0"
tracing-appender.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
simple_moving_average = "1.0.2"
