[package]
name = "snot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
axum = { version = "0.7.4", features = ["ws"] }
bincode.workspace = true
duration-str = { version = "0.7", default-features = false }
futures-util.workspace = true
indexmap.workspace = true
lazy_static.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
snarkos-aot = { path = "../aot" }
snot-common = { path = "../snot-common" }
tarpc.workspace = true
tokio.workspace = true
tower-http = { version = "0.5.2", features = ["fs"] }
tracing.workspace = true
tracing-subscriber.workspace = true
