[package]
name = "snot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
axum = { version = "0.7.4", features = ["ws"] }
bimap.workspace = true
bincode.workspace = true
clap.workspace = true
duration-str = { version = "0.7", default-features = false }
futures-util.workspace = true
hmac = "0.12.1"
indexmap.workspace = true
jwt = "0.16.0"
lazy_static.workspace = true
rand.workspace = true
rand_chacha.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2 = "0.10.8"
snarkos-aot = { path = "../aot", default-features = false }
snot-common = { path = "../snot-common" }
tarpc.workspace = true
tokio.workspace = true
tower-http = { version = "0.5.2", features = ["fs"] }
tracing.workspace = true
tracing-subscriber.workspace = true
