[package]
name = "snot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = ["ws"] }
bimap.workspace = true
bincode.workspace = true
chrono = { workspace = true, features = ["serde"] }
clap.workspace = true
duration-str = { version = "0.7", default-features = false }
futures-util.workspace = true
hmac = "0.12.1"
indexmap.workspace = true
jwt = "0.16.0"
lazy_static.workspace = true
rand.workspace = true
rand_chacha.workspace = true
regex.workspace = true
reqwest = { workspace = true, features = ["stream"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2 = "0.10.8"
snot-common = { path = "../snot-common" }
surrealdb = { version = "1.3", default-features = false, features = [
	"kv-rocksdb",
] }
tarpc.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing-appender.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "fast-rng"] }
wildmatch = "2.3.3"
